# liga-tocho

./: .gitignore  app.py  pyproject.toml
frontend/: index.html
src/liga_tocho/: bd.py  routers.py  routers_auth.py  routers_liga.py  scheduler.py  validaciones.py
